--- a/StrictModeDemo/src/main/res/layout/activity_main.xml
+++ b/StrictModeDemo/src/main/res/layout/activity_main.xml
@@ -18,5 +18,9 @@
         android:text="网络请求"
         android:layout_gravity="center_horizontal"/>
 
+    <Button android:id="@+id/bt_main"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="主页面"/>
 
 </LinearLayout>
